--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Power</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <nav class="nav">
+            <div class="nav__logo">
+                <a href="/">
+                    <img src="img/logo.svg" alt="Power">
+                </a>
+            </div>
+            <ul class="nav__ul">
+                <li class="nav__li"><a class="nav__a" href="/">Features</a></li>
+                <li class="nav__li"><a class="nav__a" href="/">Partners</a></li>
+                <li class="nav__li"><a class="nav__a" href="/">Stories</a></li>
+            </ul>
+
+            <div class="nav__btn">
+                <a class="btn btn_primary" href="/">Download for free</a>
+            </div>
+        </nav>
+        <main class="main">
+            <h1 class="main__title">The Power of Simplicity</h1>
+            <p class="main__desc">Instead of spending time searching for the right app, our AI will bring the right app
+                to you.</p>
+            <a href="/" class="btn main__btn">Learn</a>
+            <div class="loading">
+                <img src="img/ring.svg" alt="Ring">
+                <img src="img/ring.svg" alt="Ring">
+                <img src="img/ring_active.svg" alt="Ring_active">
+                <img src="img/ring.svg" alt="Ring">
+                <img src="img/ring.svg" alt="Ring">
+            </div>
+        </main>
+    </div>
 </body>
+
 </html>
