--- a/index.html
+++ b/index.html
@@ -12,36 +12,37 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="nav">
-            <div class="nav__logo">
-                <a href="/">
-                    <img src="img/logo.svg" alt="Power">
-                </a>
-            </div>
-            <ul class="nav__ul">
-                <li class="nav__li"><a class="nav__a" href="/">Features</a></li>
-                <li class="nav__li"><a class="nav__a" href="/">Partners</a></li>
-                <li class="nav__li"><a class="nav__a" href="/">Stories</a></li>
-            </ul>
+    <div class="wrapper">
+        <div class="container">
+            <nav class="nav">
+                <div class="nav__logo">
+                    <a href="/">
+                        <img src="img/logo.svg" alt="Power">
+                    </a>
+                </div>
+                <ul class="nav__ul">
+                    <li class="nav__li"><a class="nav__a" href="/">Features</a></li>
+                    <li class="nav__li"><a class="nav__a" href="/">Partners</a></li>
+                    <li class="nav__li"><a class="nav__a" href="/">Stories</a></li>
+                </ul>
 
-            <div class="nav__btn">
-                <a class="btn btn_primary" href="/">Download for free</a>
-            </div>
-        </nav>
-        <main class="main">
-            <h1 class="main__title">The Power of Simplicity</h1>
-            <p class="main__desc">Instead of spending time searching for the right app, our AI will bring the right app
-                to you.</p>
-            <a href="/" class="btn main__btn">Learn</a>
-            <div class="loading">
-                <img src="img/ring.svg" alt="Ring">
-                <img src="img/ring.svg" alt="Ring">
-                <img src="img/ring_active.svg" alt="Ring_active">
-                <img src="img/ring.svg" alt="Ring">
-                <img src="img/ring.svg" alt="Ring">
-            </div>
-        </main>
+                <div class="nav__btn">
+                    <a class="btn btn_primary" href="/">Download for free</a>
+                </div>
+            </nav>
+            <main class="main">
+                <h1 class="main__title">The Power of Simplicity</h1>
+                <p class="main__desc">Instead of spending time searching for the right app, our AI will bring the right app to you.</p>
+                <a href="/" class="btn main__btn">Learn</a>
+                <div class="loading">
+                    <img src="img/ring.svg" alt="Ring">
+                    <img src="img/ring.svg" alt="Ring">
+                    <img src="img/ring_active.svg" alt="Ring_active">
+                    <img src="img/ring.svg" alt="Ring">
+                    <img src="img/ring.svg" alt="Ring">
+                </div>
+            </main>
+        </div>
     </div>
 </body>
 
