--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </nav>
             <main class="main">
                 <h1 class="main__title">The Power of Simplicity</h1>
-                <p class="main__desc">Instead of spending time searching for the right app, our AI will bring the right app to you.</p>
+                <p class="main__desc">Instead of spending time searching for the right app, our AI will bring the right
+                    app to you.</p>
                 <a href="/" class="btn main__btn">Learn</a>
                 <div class="loading">
                     <img src="img/ring.svg" alt="Ring">
